--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^4.0.0",
+    "bn-chai": "^1.0.1",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "truffle": "^5.3.1"
   }
 }
